GiRaFFE_NRPy/Stilde_flux: Automated the memory access code. Reduced the number of generated files and function calls, as well as the computational cost.

--- a/in_progress/Tutorial-GiRaFFE_NRPy_Main_Driver.ipynb
+++ b/in_progress/Tutorial-GiRaFFE_NRPy_Main_Driver.ipynb
@@ -23,9 +23,12 @@
     "\n",
     "**Validation Notes:** This code assembles the various parts needed for GRFFE evolution in order.\n",
     "\n",
-    "### NRPy+ Source Code for this module (in alphabetical order): \n",
+    "### NRPy+ Source Code for this module:\n",
+    "* [GiRaFFE_NRPy/GiRaFFE_NRPy_Main_Driver.py](../../edit/in_progress/GiRaFFE_NRPy/GiRaFFE_NRPy_Main_Driver.py)\n",
+    "\n",
+    "### Other critical files (in alphabetical order): \n",
     "* [GiRaFFE_NRPy/Afield_flux.py](../../edit/in_progress/GiRaFFE_NRPy/Afield_flux.py) [\\[**tutorial**\\]](Tutorial-GiRaFFE_NRPy-Afield_flux.ipynb) Generates the expressions to find the flux term of the induction equation.\n",
-    "* [GiRaFFE_NRPy/GiRaFFE_NRPy_A2B.py](../../edit/in_progress/GiRaFFE_NRPy/GiRaFFE_NRPy_A2B.py) [\\[**tutorial**\\]](Tutorial-GiRaFFE_NRPy-Afield_flux.ipynb) Generates the driver to compute the magnetic field from the vector potential/\n",
+    "* [GiRaFFE_NRPy/GiRaFFE_NRPy_A2B.py](../../edit/in_progress/GiRaFFE_NRPy/GiRaFFE_NRPy_A2B.py) [\\[**tutorial**\\]](Tutorial-GiRaFFE_NRPy-A2B.ipynb) Generates the driver to compute the magnetic field from the vector potential/\n",
     "* [GiRaFFE_NRPy/GiRaFFE_NRPy_BCs.py](../../edit/in_progress/GiRaFFE_NRPy/GiRaFFE_NRPy_BCs.py) [\\[**tutorial**\\]](Tutorial-GiRaFFE_NRPy-BCs.ipynb) Generates the code to apply boundary conditions to the vector potential, scalar potential, and three-velocity.\n",
     "* [GiRaFFE_NRPy/GiRaFFE_NRPy_C2P_P2C.py](../../edit/in_progress/GiRaFFE_NRPy/GiRaFFE_NRPy_C2P_P2C.py) [\\[**tutorial**\\]](Tutorial-GiRaFFE_NRPy-C2P_P2C.ipynb) Generates the conservative-to-primitive and primitive-to-conservative solvers.\n",
     "* [GiRaFFE_NRPy/GiRaFFE_NRPy_Metric_Face_Values.py](../../edit/in_progress/GiRaFFE_NRPy/GiRaFFE_NRPy_Metric_Face_Values.py) [\\[**tutorial**\\]](Tutorial-GiRaFFE_NRPy-Metric_Face_Values.ipynb) Generates code to interpolate metric gridfunctions to cell faces.\n",
@@ -38,10 +41,14 @@
     "## Introduction: \n",
     "Having written all the various algorithms that will go into evolving the GRFFE equations forward through time, we are ready to write a start-to-finish module to do so. However, to help keep things more organized, we will first create a dedicated module to assemble the various functions we need to run, in order, to perform the evolution. This will reduce the length of the standalone C code, improving that notebook's readability.\n",
     "\n",
+    "<a id='prelim'></a>\n",
+    "# Table of Contents\n",
+    "$$\\label{prelim}$$\n",
+    "\n",
     "During a given RK substep, we will perform the following steps in this order, based on the order used in the original `GiRaFFE`:\n",
     "0. [Step 0](#prelim): Preliminaries\n",
     "1. [Step 1](#rhs): Calculate the right-hand sides\n",
-    "    1. [Step 1.a](#parenthetical): Calculate the parenthetical terms of which we will take finite-difference derivatives\n",
+    "    1. [Step 1.a](#parenthetical): Calculate the portion of the gauge terms for $A_k$, $(\\alpha \\Phi - \\beta^j A_j)$ and $\\Phi$, $(\\alpha\\sqrt{\\gamma}A^j - \\beta^j [\\sqrt{\\gamma} \\Phi])$ *inside* the parentheses to be finite-differenced.\n",
     "        * **GRFFE/equations.py**, **GRHD/equations.py**\n",
     "    1. [Step 1.b](#source): Calculate the source terms of $\\partial_t A_i$, $\\partial_t \\tilde{S}_i$, and $\\partial_t [\\sqrt{\\gamma} \\Phi]$ right-hand sides\n",
     "        * **GRFFE/equations.py**, **GRHD/equations.py**, **GiRaFFE_NRPy/GiRaFFE_NRPy_Source_Terms**\n",
@@ -135,10 +142,10 @@
     "\n",
     "In the method of lines using Runge-Kutta methods, each timestep involves several \"RK substeps\" during which we will run the same set of function calls. These can be divided into two groups: one in which the RHSs themselves are calculated, and a second in which boundary conditions are applied and auxiliary variables updated (the post-step). Here, we focus on that first group.\n",
     "\n",
-    "## Step 1.a: Calculate the parenthetical terms of which we will take finite-difference derivatives \\[Back to [top](#toc)\\]\n",
+    "## Step 1.a: Calculate the portion of the gauge terms for $A_k$, $(\\alpha \\Phi - \\beta^j A_j)$ and $\\Phi$, $(\\alpha\\sqrt{\\gamma}A^j - \\beta^j [\\sqrt{\\gamma} \\Phi])$ *inside* the parentheses to be finite-differenced. \\[Back to [top](#toc)\\]\n",
     "$$\\label{parenthetical}$$\n",
     "\n",
-    "The source terms of our evolution equations consist of two terms that are derivatives of some parenthetical quantity. We can save some effort and execution time (at the cost of memory needed) by computing these parentheticals, storing them, and then finite-differencing that stored variable. For more information, see [here](../Tutorial-GRFFE_Equations-Cartesian.ipynb), and [here](../Tutorial-GRHD_Equations-Cartesian.ipynb), and [here](Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-Source_Terms.ipynb)."
+    "The source terms of our evolution equations consist of two terms that are derivatives of some parenthetical quantity. We can save some effort and execution time (at the cost of memory needed) by computing these parentheticals, storing them, and then finite-differencing that stored variable. For more information, see the notebook for the [implementation](Tutorial-GiRaFFE_NRPy-Source_Terms.ipynb) and the [validation](Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-Source_Terms.ipynb), as well as [Tutorial-GRFFE_Equations-Cartesian](../Tutorial-GRFFE_Equations-Cartesian.ipynb) and [Tutorial-GRHD_Equations-Cartesian](../Tutorial-GRHD_Equations-Cartesian.ipynb) for the terms themselves. "
    ]
   },
   {
@@ -257,7 +264,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We also need to compute the source term of the $\\tilde{S}_i$ evolution equation. This term involves derivatives of the four metric, so we can save some effort here by taking advantage of the interpolations done of the metric gridfunctions to the cell faces, which will allow us to take a finite-difference derivative with the accuracy of a higher order and the computational cost of a lower order. However, it will require some more complicated coding, detailed [here](Tutorial-GiRaFFE_NRPy-Source_Terms.ipynb) "
+    "We also need to compute the source term of the $\\tilde{S}_i$ evolution equation. This term involves derivatives of the four metric, so we can save some effort here by taking advantage of the interpolations done of the metric gridfunctions to the cell faces, which will allow us to take a finite-difference derivative with the accuracy of a higher order and the computational cost of a lower order. However, it will require some more complicated coding, detailed in [Tutorial-GiRaFFE_NRPy-Source_Terms](Tutorial-GiRaFFE_NRPy-Source_Terms.ipynb) "
    ]
   },
   {
@@ -293,7 +300,7 @@
     "## Step 1.c: Calculate the Flux terms \\[Back to [top](#toc)\\]\n",
     "$$\\label{flux}$$\n",
     "\n",
-    "Now, we will compute the flux terms of $\\partial_t A_i$ and $\\partial_t \\tilde{S}_i$. To do so, we will first need to interpolate the metric gridfunctions to cell faces and to reconstruct the primitives on the cell faces. "
+    "Now, we will compute the flux terms of $\\partial_t A_i$ and $\\partial_t \\tilde{S}_i$. To do so, we will first need to interpolate the metric gridfunctions to cell faces and to reconstruct the primitives on the cell faces using the code detailed in [Tutorial-GiRaFFE_NRPy-Metric_Face_Values](Tutorial-GiRaFFE_NRPy-Metric_Face_Values.ipynb) and in [Tutorial-GiRaFFE_NRPy-PPM](Tutorial-GiRaFFE_NRPy-PPM.ipynb)."
    ]
   },
   {
@@ -324,7 +331,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here, we will write the function to compute the electric field contribution to the induction equation RHS. The electric field in the $i^{\\rm th}$ direction, it will contribute to the $j^{\\rm th}$ and $k^{\\rm th}$ component of the electric field. That is, in Cartesian coordinates, the component $x$ of the electric field will be the average of the values computed on the cell faces in the $\\pm y$- and $\\pm z$-directions, and so forth for the other components. This ultimately results in the six functions we create below."
+    "Here, we will write the function to compute the electric field contribution to the induction equation RHS. This is coded with documentation in [Tutorial-GiRaFFE_NRPy-Afield_flux](Tutorial-GiRaFFE_NRPy-Afield_flux.ipynb). The electric field in the $i^{\\rm th}$ direction, it will contribute to the $j^{\\rm th}$ and $k^{\\rm th}$ component of the electric field. That is, in Cartesian coordinates, the component $x$ of the electric field will be the average of the values computed on the cell faces in the $\\pm y$- and $\\pm z$-directions, and so forth for the other components. This ultimately results in the six functions we create below."
    ]
   },
   {
@@ -370,27 +377,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We must do something similar here, albeit a bit simpler. For instance, the $x$ component of $\\partial_t \\tilde{S}_i$ will be a finite difference of the flux throught the faces in the $\\pm x$ direction."
+    "We must do something similar here, albeit a bit simpler. For instance, the $x$ component of $\\partial_t \\tilde{S}_i$ will be a finite difference of the flux throught the faces in the $\\pm x$ direction; for further detail, see [Tutorial-GiRaFFE_NRPy-Stilde_flux](Tutorial-GiRaFFE_NRPy-Stilde_flux.ipynb)."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Output C function calculate_Stilde_flux_D0_right() to file GiRaFFE_standalone_Ccodes\\RHSs\\calculate_Stilde_flux_D0_right.h\n",
-      "Output C function calculate_Stilde_flux_D0_left() to file GiRaFFE_standalone_Ccodes\\RHSs\\calculate_Stilde_flux_D0_left.h\n",
-      "Output C function calculate_Stilde_flux_D1_right() to file GiRaFFE_standalone_Ccodes\\RHSs\\calculate_Stilde_flux_D1_right.h\n",
-      "Output C function calculate_Stilde_flux_D1_left() to file GiRaFFE_standalone_Ccodes\\RHSs\\calculate_Stilde_flux_D1_left.h\n",
-      "Output C function calculate_Stilde_flux_D2_right() to file GiRaFFE_standalone_Ccodes\\RHSs\\calculate_Stilde_flux_D2_right.h\n",
-      "Output C function calculate_Stilde_flux_D2_left() to file GiRaFFE_standalone_Ccodes\\RHSs\\calculate_Stilde_flux_D2_left.h\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import GiRaFFE_NRPy.Stilde_flux as Sf\n",
     "subdir = \"RHSs\"\n",
@@ -414,7 +408,7 @@
     "## Step 2.a: Apply boundary conditions to $A_i$ and $\\sqrt{\\gamma} \\Phi$ \\[Back to [top](#toc)\\]\n",
     "$$\\label{potential_bc}$$\n",
     "\n",
-    "First, we will apply boundary conditions to the vector potential, $A_i$, and the scalar potential $\\sqrt{\\gamma} \\Phi$. The file we generate here contains both functions we need for BCs. \n"
+    "First, we will apply boundary conditions to the vector potential, $A_i$, and the scalar potential $\\sqrt{\\gamma} \\Phi$. The file we generate here contains both functions we need for BCs, as documented in [Tutorial-GiRaFFE_NRPy-BCs](Tutorial-GiRaFFE_NRPy-BCs.ipynb)."
    ]
   },
   {
@@ -438,7 +432,7 @@
     "## Step 2.b: Compute $B^i$ from $A_i$ \\[Back to [top](#toc)\\]\n",
     "$$\\label{a2b}$$\n",
     "\n",
-    "Now, we will calculate the magnetic field as the curl of the vector potential at all points in our domain. "
+    "Now, we will calculate the magnetic field as the curl of the vector potential at all points in our domain; this requires care to be taken in the ghost zones, which is detailed in [Tutorial-GiRaFFE_NRPy-A2B](Tutorial-GiRaFFE_NRPy-A2B.ipynb)."
    ]
   },
   {
@@ -462,7 +456,7 @@
     "## Step 2.c: Run the Conservative-to-Primitive solver \\[Back to [top](#toc)\\]\n",
     "$$\\label{c2p}$$\n",
     "\n",
-    "With these functions, we apply fixes to the Poynting flux, and use that to update the three-velocity. Then, we apply our current sheet prescription to the velocity, and recompute the Poynting flux to agree with the now-fixed velocity."
+    "With these functions, we apply fixes to the Poynting flux, and use that to update the three-velocity. Then, we apply our current sheet prescription to the velocity, and recompute the Poynting flux to agree with the now-fixed velocity. More detail can be found in [Tutorial-GiRaFFE_NRPy-C2P_P2C](Tutorial-GiRaFFE_NRPy-C2P_P2C.ipynb)."
    ]
   },
   {
@@ -548,7 +542,7 @@
     "\n",
     "Now, we can apply outflow boundary conditions to the Valencia three-velocity. This specific type of boundary condition helps avoid numerical error \"flowing\" into our grid. \n",
     "\n",
-    "This function has already been generated [here](#potential_bc)."
+    "This function has already been generated [above](#potential_bc)."
    ]
   },
   {
@@ -596,12 +590,9 @@
     "#include \"RHSs/calculate_StildeD1_source_term.h\"\n",
     "#include \"RHSs/calculate_StildeD2_source_term.h\"\n",
     "#include \"../calculate_E_field_flat_all_in_one.h\"\n",
-    "#include \"RHSs/calculate_Stilde_flux_D0_right.h\"\n",
-    "#include \"RHSs/calculate_Stilde_flux_D0_left.h\"\n",
-    "#include \"RHSs/calculate_Stilde_flux_D1_right.h\"\n",
-    "#include \"RHSs/calculate_Stilde_flux_D1_left.h\"\n",
-    "#include \"RHSs/calculate_Stilde_flux_D2_right.h\"\n",
-    "#include \"RHSs/calculate_Stilde_flux_D2_left.h\"\n",
+    "#include \"RHSs/calculate_Stilde_flux_D0.h\"\n",
+    "#include \"RHSs/calculate_Stilde_flux_D1.h\"\n",
+    "#include \"RHSs/calculate_Stilde_flux_D2.h\"\n",
     "#include \"boundary_conditions/GiRaFFE_boundary_conditions.h\"\n",
     "#include \"A2B/driver_AtoB.h\"\n",
     "#include \"C2P/GiRaFFE_NRPy_cons_to_prims.h\"\n",
@@ -710,22 +701,19 @@
     "            //calculate_E_field_D0_left(params,auxevol_gfs,rhs_gfs);\n",
     "            // Finally, we calculate the flux of StildeD and add the appropriate finite-differences\n",
     "            // to the RHSs.\n",
-    "            calculate_Stilde_flux_D0_right(params,auxevol_gfs,rhs_gfs);\n",
-    "            calculate_Stilde_flux_D0_left(params,auxevol_gfs,rhs_gfs);\n",
+    "            calculate_Stilde_flux_D0(params,auxevol_gfs,rhs_gfs);\n",
     "        }\n",
     "        else if(flux_dirn==1) {\n",
     "            calculate_StildeD1_source_term(params,auxevol_gfs,rhs_gfs);\n",
     "            //calculate_E_field_D1_right(params,auxevol_gfs,rhs_gfs);\n",
     "            //calculate_E_field_D1_left(params,auxevol_gfs,rhs_gfs);\n",
-    "            calculate_Stilde_flux_D1_right(params,auxevol_gfs,rhs_gfs);\n",
-    "            calculate_Stilde_flux_D1_left(params,auxevol_gfs,rhs_gfs);\n",
+    "            calculate_Stilde_flux_D1(params,auxevol_gfs,rhs_gfs);\n",
     "        }\n",
     "        else {\n",
     "            calculate_StildeD2_source_term(params,auxevol_gfs,rhs_gfs);\n",
     "            //calculate_E_field_D2_right(params,auxevol_gfs,rhs_gfs);\n",
     "            //calculate_E_field_D2_left(params,auxevol_gfs,rhs_gfs);\n",
-    "            calculate_Stilde_flux_D2_right(params,auxevol_gfs,rhs_gfs);\n",
-    "            calculate_Stilde_flux_D2_left(params,auxevol_gfs,rhs_gfs);\n",
+    "            calculate_Stilde_flux_D2(params,auxevol_gfs,rhs_gfs);\n",
     "        }\n",
     "        for(int count=0;count<=1;count++) {\n",
     "            // This function is written to be general, using notation that matches the forward permutation added to AD2,\n",
@@ -819,12 +807,6 @@
       "Output C function calculate_E_field_D1_left() to file GiRaFFE_validation_Ccodes\\RHSs\\calculate_E_field_D1_left.h\n",
       "Output C function calculate_E_field_D2_right() to file GiRaFFE_validation_Ccodes\\RHSs\\calculate_E_field_D2_right.h\n",
       "Output C function calculate_E_field_D2_left() to file GiRaFFE_validation_Ccodes\\RHSs\\calculate_E_field_D2_left.h\n",
-      "Output C function calculate_Stilde_flux_D0_right() to file GiRaFFE_validation_Ccodes\\RHSs\\calculate_Stilde_flux_D0_right.h\n",
-      "Output C function calculate_Stilde_flux_D0_left() to file GiRaFFE_validation_Ccodes\\RHSs\\calculate_Stilde_flux_D0_left.h\n",
-      "Output C function calculate_Stilde_flux_D1_right() to file GiRaFFE_validation_Ccodes\\RHSs\\calculate_Stilde_flux_D1_right.h\n",
-      "Output C function calculate_Stilde_flux_D1_left() to file GiRaFFE_validation_Ccodes\\RHSs\\calculate_Stilde_flux_D1_left.h\n",
-      "Output C function calculate_Stilde_flux_D2_right() to file GiRaFFE_validation_Ccodes\\RHSs\\calculate_Stilde_flux_D2_right.h\n",
-      "Output C function calculate_Stilde_flux_D2_left() to file GiRaFFE_validation_Ccodes\\RHSs\\calculate_Stilde_flux_D2_left.h\n",
       "Output C function GiRaFFE_NRPy_cons_to_prims() to file GiRaFFE_validation_Ccodes\\C2P\\GiRaFFE_NRPy_cons_to_prims.h\n",
       "Output C function GiRaFFE_NRPy_prims_to_cons() to file GiRaFFE_validation_Ccodes\\C2P\\GiRaFFE_NRPy_prims_to_cons.h\n"
      ]
@@ -890,17 +872,11 @@
       "No difference. TEST PASSED!\n",
       "Checking file RHSs/calculate_E_field_D2_left.h\n",
       "No difference. TEST PASSED!\n",
-      "Checking file RHSs/calculate_Stilde_flux_D0_right.h\n",
+      "Checking file RHSs/calculate_Stilde_flux_D0.h\n",
       "No difference. TEST PASSED!\n",
-      "Checking file RHSs/calculate_Stilde_flux_D0_left.h\n",
+      "Checking file RHSs/calculate_Stilde_flux_D1.h\n",
       "No difference. TEST PASSED!\n",
-      "Checking file RHSs/calculate_Stilde_flux_D1_right.h\n",
-      "No difference. TEST PASSED!\n",
-      "Checking file RHSs/calculate_Stilde_flux_D1_left.h\n",
-      "No difference. TEST PASSED!\n",
-      "Checking file RHSs/calculate_Stilde_flux_D2_right.h\n",
-      "No difference. TEST PASSED!\n",
-      "Checking file RHSs/calculate_Stilde_flux_D2_left.h\n",
+      "Checking file RHSs/calculate_Stilde_flux_D2.h\n",
       "No difference. TEST PASSED!\n",
       "Checking file boundary_conditions/GiRaFFE_boundary_conditions.h\n",
       "No difference. TEST PASSED!\n",
@@ -934,12 +910,9 @@
     "         \"RHSs/calculate_E_field_D1_left.h\",\n",
     "         \"RHSs/calculate_E_field_D2_right.h\",\n",
     "         \"RHSs/calculate_E_field_D2_left.h\",\n",
-    "         \"RHSs/calculate_Stilde_flux_D0_right.h\",\n",
-    "         \"RHSs/calculate_Stilde_flux_D0_left.h\",\n",
-    "         \"RHSs/calculate_Stilde_flux_D1_right.h\",\n",
-    "         \"RHSs/calculate_Stilde_flux_D1_left.h\",\n",
-    "         \"RHSs/calculate_Stilde_flux_D2_right.h\",\n",
-    "         \"RHSs/calculate_Stilde_flux_D2_left.h\",\n",
+    "         \"RHSs/calculate_Stilde_flux_D0.h\",\n",
+    "         \"RHSs/calculate_Stilde_flux_D1.h\",\n",
+    "         \"RHSs/calculate_Stilde_flux_D2.h\",\n",
     "         \"boundary_conditions/GiRaFFE_boundary_conditions.h\",\n",
     "         \"A2B/driver_AtoB.h\",\n",
     "         \"C2P/GiRaFFE_NRPy_cons_to_prims.h\",\n",
