--- a/in_progress/Tutorial-GiRaFFE_NRPy-Stilde-flux.ipynb
+++ b/in_progress/Tutorial-GiRaFFE_NRPy-Stilde-flux.ipynb
@@ -393,8 +393,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There is some additional complexity to consider in generating the C code for these expressions. The flux term we need to add to the RHSs is a finite difference of the fluxes we have calculated so far, so these cannot be simple pointwise operations. However, we also cannot use NRPy+'s build-in finite-differencing tools because of how we store the reconstructed quantities (that is, quantities reconstructed on the $i-1/2$ face is stored at point $i$ in memory), which makes the FD template we need look just like a forward finite-differencing template, which NRPy+ cannot do. So, we must write the code to read and write data from and to memory ourselves. We will write a basic prototype block, and then use string replacement functions to create the six variants we need.\n",
-    "**TODO: Can this be brought down to 3 function calls?**"
+    "There is some additional complexity to consider in generating the C code for these expressions. The flux term we need to add to the RHSs is a finite difference of the fluxes we have calculated so far, so these cannot be simple pointwise operations. However, we also cannot use NRPy+'s build-in finite-differencing tools because of how we store the reconstructed quantities (that is, quantities reconstructed on the $i-1/2$ face is stored at point $i$ in memory), which makes the FD template we need look just like a forward finite-differencing template, which NRPy+ cannot do. So, we must write the code to read and write data from and to memory ourselves. We will do so algorithmically with python string operations, so as to reduce the possibility from human error. \n",
+    "\n",
+    "We will loop over the interior, but use string replacement to include an extra point in the $+x,y,z$ ghostzones. The finite differences here will be done backwards from what we're used to; while we would normally read from several points and then write to a single point, we will read from a single point and then write to two points. In this particular case, this will reduce the number of times we recalculate things. "
    ]
   },
   {
@@ -403,40 +404,46 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Memory_Read = \"\"\"const double alpha_face = auxevol_gfs[IDX4S(ALPHA_FACEGF, i0,i1,i2)];\n",
-    "const double gamma_faceDD00 = auxevol_gfs[IDX4S(GAMMA_FACEDD00GF, i0,i1,i2)];\n",
-    "const double gamma_faceDD01 = auxevol_gfs[IDX4S(GAMMA_FACEDD01GF, i0,i1,i2)];\n",
-    "const double gamma_faceDD02 = auxevol_gfs[IDX4S(GAMMA_FACEDD02GF, i0,i1,i2)];\n",
-    "const double gamma_faceDD11 = auxevol_gfs[IDX4S(GAMMA_FACEDD11GF, i0,i1,i2)];\n",
-    "const double gamma_faceDD12 = auxevol_gfs[IDX4S(GAMMA_FACEDD12GF, i0,i1,i2)];\n",
-    "const double gamma_faceDD22 = auxevol_gfs[IDX4S(GAMMA_FACEDD22GF, i0,i1,i2)];\n",
-    "const double beta_faceU0 = auxevol_gfs[IDX4S(BETA_FACEU0GF, i0,i1,i2)];\n",
-    "const double beta_faceU1 = auxevol_gfs[IDX4S(BETA_FACEU1GF, i0,i1,i2)];\n",
-    "const double beta_faceU2 = auxevol_gfs[IDX4S(BETA_FACEU2GF, i0,i1,i2)];\n",
-    "const double Valenciav_rU0 = auxevol_gfs[IDX4S(VALENCIAV_RU0GF, i0,i1,i2)];\n",
-    "const double Valenciav_rU1 = auxevol_gfs[IDX4S(VALENCIAV_RU1GF, i0,i1,i2)];\n",
-    "const double Valenciav_rU2 = auxevol_gfs[IDX4S(VALENCIAV_RU2GF, i0,i1,i2)];\n",
-    "const double B_rU0 = auxevol_gfs[IDX4S(B_RU0GF, i0,i1,i2)];\n",
-    "const double B_rU1 = auxevol_gfs[IDX4S(B_RU1GF, i0,i1,i2)];\n",
-    "const double B_rU2 = auxevol_gfs[IDX4S(B_RU2GF, i0,i1,i2)];\n",
-    "const double Valenciav_lU0 = auxevol_gfs[IDX4S(VALENCIAV_LU0GF, i0,i1,i2)];\n",
-    "const double Valenciav_lU1 = auxevol_gfs[IDX4S(VALENCIAV_LU1GF, i0,i1,i2)];\n",
-    "const double Valenciav_lU2 = auxevol_gfs[IDX4S(VALENCIAV_LU2GF, i0,i1,i2)];\n",
-    "const double B_lU0 = auxevol_gfs[IDX4S(B_LU0GF, i0,i1,i2)];\n",
-    "const double B_lU1 = auxevol_gfs[IDX4S(B_LU1GF, i0,i1,i2)];\n",
-    "const double B_lU2 = auxevol_gfs[IDX4S(B_LU2GF, i0,i1,i2)];\n",
-    "REAL Stilde_fluxD0 = 0; REAL Stilde_fluxD1 = 0; REAL Stilde_fluxD2 = 0;\n",
-    "\"\"\"\n",
-    "Memory_Write = \"\"\"rhs_gfs[IDX4S(STILDED0GF, i0, i1, i2)] += invdx0*Stilde_fluxD0;\n",
-    "rhs_gfs[IDX4S(STILDED1GF, i0, i1, i2)] += invdx0*Stilde_fluxD1;\n",
-    "rhs_gfs[IDX4S(STILDED2GF, i0, i1, i2)] += invdx0*Stilde_fluxD2;\n",
-    "\"\"\"\n",
+    "Memory_Read = \"\"\n",
+    "# Read in all the inputs:\n",
+    "for var in [\"GAMMA_FACEDD00\", \"GAMMA_FACEDD01\", \"GAMMA_FACEDD02\",\n",
+    "            \"GAMMA_FACEDD11\", \"GAMMA_FACEDD12\", \"GAMMA_FACEDD22\",\n",
+    "            \"BETA_FACEU0\", \"BETA_FACEU1\", \"BETA_FACEU2\",\"ALPHA_FACE\",\n",
+    "            \"B_RU0\",\"B_RU1\",\"B_RU2\",\"B_LU0\",\"B_LU1\",\"B_LU2\",\n",
+    "            \"VALENCIAV_RU0\",\"VALENCIAV_RU1\",\"VALENCIAV_RU2\",\n",
+    "            \"VALENCIAV_LU0\",\"VALENCIAV_LU1\",\"VALENCIAV_LU2\"]:\n",
+    "    lhsvar = var.lower().replace(\"dd\",\"DD\").replace(\"u\",\"U\").replace(\"b_\",\"B_\").replace(\"valencia\",\"Valencia\")\n",
+    "    # e.g.,\n",
+    "    # const REAL gammaDD00dD0 = auxevol_gfs[IDX4S(GAMMA_FACEDD00GF,i0,i1,i2)];\n",
+    "    Memory_Read += \"const REAL \"+lhsvar+\" = auxevol_gfs[IDX4S(\"+var+\"GF,i0,i1,i2)];\\n\"\n",
     "\n",
-    "indices = [\"i0\",\"i1\",\"i2\"]\n",
-    "indicesp1 = [\"i0+1\",\"i1+1\",\"i2+1\"]\n",
-    "assignment = \"+=\"\n",
-    "assignmentp1 = \"-=\"\n",
-    "invdx = [\"invdx0\",\"invdx1\",\"invdx2\"]\n",
+    "# Storage for the outputs:\n",
+    "for var in [\"Stilde_fluxD0\",\"Stilde_fluxD1\",\"Stilde_fluxD2\"]:\n",
+    "    # e.g.,\n",
+    "    # REAL Stilde_fluxD0 = 0;\n",
+    "    Memory_Read += \"REAL \"+var+\" = 0;\\n\"\n",
+    "\n",
+    "# This quick function returns a nearby point for memory access. We need this because derivatives are not local operations.\n",
+    "def idxm1(dirn):\n",
+    "    if dirn==0:\n",
+    "        return \"i0-1, i1, i2\"\n",
+    "    if dirn==1:\n",
+    "        return \"i0, i1-1, i2\"\n",
+    "    if dirn==2:\n",
+    "        return \"i0, i1, i2-1\"\n",
+    "\n",
+    "# Write the outputs:\n",
+    "Memory_Write = []\n",
+    "for dirn in range(3):\n",
+    "    for comp in range(3):\n",
+    "        Memory_Write.append(\"\")\n",
+    "        # e.g.,\n",
+    "        # rhs_gfs[IDX4S(STILDED0GF, i0, i1, i2)] += invdx0*Stilde_fluxD0;\n",
+    "        # (Note that the invdx0 gets substituted separately! It shouldn't necessarily match Stilde!)\n",
+    "        Memory_Write[dirn] += \"rhs_gfs[IDX4S(STILDED\"+str(comp)+\"GF, i0, i1, i2)] += invdx\"+str(dirn)+\"*Stilde_fluxD\"+str(comp)+\";\\n\"\n",
+    "        # e.g.,\n",
+    "        # rhs_gfs[IDX4S(STILDED0GF, i0-1, i1, i2)] -= invdx0*Stilde_fluxD0;\n",
+    "        Memory_Write[dirn] += \"rhs_gfs[IDX4S(STILDED\"+str(comp)+\"GF, \"+idxm1(dirn)+\")] -= invdx\"+str(dirn)+\"*Stilde_fluxD\"+str(comp)+\";\\n\"\n",
     "\n",
     "def generate_C_code_for_Stilde_flux(out_dir,inputs_provided = False, alpha_face=None, gamma_faceDD=None, beta_faceU=None,\n",
     "                                    Valenciav_rU=None, B_rU=None, Valenciav_lU=None, B_lU=None, sqrt4pi=None,\n",
@@ -457,40 +464,32 @@
     "        sqrt4pi = par.Cparameters(\"REAL\",thismodule,\"sqrt4pi\",\"sqrt(4.0*M_PI)\")\n",
     "\n",
     "    for flux_dirn in range(3):\n",
-    "        calculate_Stilde_flux(flux_dirn,alpha_face,gamma_faceDD,beta_faceU,\\\n",
-    "                                 Valenciav_rU,B_rU,Valenciav_lU,B_lU,sqrt4pi)\n",
-    "        Stilde_flux_to_print = [\\\n",
-    "                                Stilde_fluxD[0],\\\n",
-    "                                Stilde_fluxD[1],\\\n",
-    "                                Stilde_fluxD[2],\\\n",
+    "        calculate_Stilde_flux(flux_dirn,alpha_face,gamma_faceDD,beta_faceU,\n",
+    "                              Valenciav_rU,B_rU,Valenciav_lU,B_lU,sqrt4pi)\n",
+    "        Stilde_flux_to_print = [\n",
+    "                                Stilde_fluxD[0],\n",
+    "                                Stilde_fluxD[1],\n",
+    "                                Stilde_fluxD[2]\n",
     "                               ]\n",
-    "        Stilde_flux_names = [\\\n",
-    "                             \"Stilde_fluxD0\",\\\n",
-    "                             \"Stilde_fluxD1\",\\\n",
-    "                             \"Stilde_fluxD2\",\\\n",
+    "        Stilde_flux_names = [\n",
+    "                             \"Stilde_fluxD0\",\n",
+    "                             \"Stilde_fluxD1\",\n",
+    "                             \"Stilde_fluxD2\"\n",
     "                            ]\n",
     "\n",
-    "        desc = \"Compute the flux of all 3 components of tilde{S}_i on the right face in the \" + str(flux_dirn) + \".\"\n",
-    "        name = \"calculate_Stilde_flux_D\" + str(flux_dirn) + \"_right\"\n",
-    "        outCfunction(\n",
-    "            outfile  = os.path.join(out_dir,name+\".h\"), desc=desc, name=name,\n",
+    "        desc = \"Compute the flux term of all 3 components of tilde{S}_i on the right face in the \" + str(flux_dirn) + \"direction.\"\n",
+    "        name = \"calculate_Stilde_flux_D\" + str(flux_dirn)\n",
+    "        Ccode_function = outCfunction(\n",
+    "            outfile  = \"returnstring\", desc=desc, name=name,\n",
     "            params   =\"const paramstruct *params,const REAL *auxevol_gfs,REAL *rhs_gfs\",\n",
     "            body     =  Memory_Read \\\n",
     "                       +outputC(Stilde_flux_to_print,Stilde_flux_names,\"returnstring\",params=outCparams).replace(\"IDX4\",\"IDX4S\")\\\n",
-    "                       +Memory_Write.replace(invdx[0],invdx[flux_dirn]),\n",
+    "                       +Memory_Write[flux_dirn],\n",
     "            loopopts =\"InteriorPoints\",\n",
-    "            rel_path_for_Cparams=os.path.join(\"../\"))\n",
+    "            rel_path_for_Cparams=os.path.join(\"../\")).replace(\"NGHOSTS+Nxx0\",\"NGHOSTS+Nxx0+1\").replace(\"NGHOSTS+Nxx1\",\"NGHOSTS+Nxx1+1\").replace(\"NGHOSTS+Nxx2\",\"NGHOSTS+Nxx2+1\")\n",
     "\n",
-    "        desc = \"Compute the flux of all 3 components of tilde{S}_i on the left face in the \" + str(flux_dirn) + \".\"\n",
-    "        name = \"calculate_Stilde_flux_D\" + str(flux_dirn) + \"_left\"\n",
-    "        outCfunction(\n",
-    "            outfile  = os.path.join(out_dir,name+\".h\"), desc=desc, name=name,\n",
-    "            params   =\"const paramstruct *params,const REAL *auxevol_gfs,REAL *rhs_gfs\",\n",
-    "            body     =  Memory_Read.replace(indices[flux_dirn],indicesp1[flux_dirn]) \\\n",
-    "                       +outputC(Stilde_flux_to_print,Stilde_flux_names,\"returnstring\",params=outCparams).replace(\"IDX4\",\"IDX4S\")\\\n",
-    "                       +Memory_Write.replace(invdx[0],invdx[flux_dirn]).replace(assignment,assignmentp1),\n",
-    "            loopopts =\"InteriorPoints\",\n",
-    "            rel_path_for_Cparams=os.path.join(\"../\"))\n"
+    "        with open(os.path.join(out_dir,name+\".h\"),\"w\") as file:\n",
+    "            file.write(Ccode_function)"
    ]
   },
   {
@@ -614,30 +613,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Output C function calculate_Stilde_flux_D0_right() to file GiRaFFE_standalone_Ccodes\\calculate_Stilde_flux_D0_right.h\n",
-      "Output C function calculate_Stilde_flux_D0_left() to file GiRaFFE_standalone_Ccodes\\calculate_Stilde_flux_D0_left.h\n",
-      "Output C function calculate_Stilde_flux_D1_right() to file GiRaFFE_standalone_Ccodes\\calculate_Stilde_flux_D1_right.h\n",
-      "Output C function calculate_Stilde_flux_D1_left() to file GiRaFFE_standalone_Ccodes\\calculate_Stilde_flux_D1_left.h\n",
-      "Output C function calculate_Stilde_flux_D2_right() to file GiRaFFE_standalone_Ccodes\\calculate_Stilde_flux_D2_right.h\n",
-      "Output C function calculate_Stilde_flux_D2_left() to file GiRaFFE_standalone_Ccodes\\calculate_Stilde_flux_D2_left.h\n",
-      "Output C function calculate_Stilde_flux_D0_right() to file GiRaFFE_Ccodes_validation\\calculate_Stilde_flux_D0_right.h\n",
-      "Output C function calculate_Stilde_flux_D0_left() to file GiRaFFE_Ccodes_validation\\calculate_Stilde_flux_D0_left.h\n",
-      "Output C function calculate_Stilde_flux_D1_right() to file GiRaFFE_Ccodes_validation\\calculate_Stilde_flux_D1_right.h\n",
-      "Output C function calculate_Stilde_flux_D1_left() to file GiRaFFE_Ccodes_validation\\calculate_Stilde_flux_D1_left.h\n",
-      "Output C function calculate_Stilde_flux_D2_right() to file GiRaFFE_Ccodes_validation\\calculate_Stilde_flux_D2_right.h\n",
-      "Output C function calculate_Stilde_flux_D2_left() to file GiRaFFE_Ccodes_validation\\calculate_Stilde_flux_D2_left.h\n",
       "Printing difference between original C code and this code...\n",
-      "Checking file RHSs/calculate_E_field_D0_right.h\n",
+      "Checking file calculate_Stilde_flux_D0.h\n",
       "No difference. TEST PASSED!\n",
-      "Checking file RHSs/calculate_E_field_D0_left.h\n",
+      "Checking file calculate_Stilde_flux_D1.h\n",
       "No difference. TEST PASSED!\n",
-      "Checking file RHSs/calculate_E_field_D1_right.h\n",
-      "No difference. TEST PASSED!\n",
-      "Checking file RHSs/calculate_E_field_D1_left.h\n",
-      "No difference. TEST PASSED!\n",
-      "Checking file RHSs/calculate_E_field_D2_right.h\n",
-      "No difference. TEST PASSED!\n",
-      "Checking file RHSs/calculate_E_field_D2_left.h\n",
+      "Checking file calculate_Stilde_flux_D2.h\n",
       "No difference. TEST PASSED!\n"
      ]
     }
@@ -663,12 +644,9 @@
     "\n",
     "print(\"Printing difference between original C code and this code...\")\n",
     "# Open the files to compare\n",
-    "files = [\"RHSs/calculate_E_field_D0_right.h\",\n",
-    "         \"RHSs/calculate_E_field_D0_left.h\",\n",
-    "         \"RHSs/calculate_E_field_D1_right.h\",\n",
-    "         \"RHSs/calculate_E_field_D1_left.h\",\n",
-    "         \"RHSs/calculate_E_field_D2_right.h\",\n",
-    "         \"RHSs/calculate_E_field_D2_left.h\"]\n",
+    "files = [\"calculate_Stilde_flux_D0.h\",\n",
+    "         \"calculate_Stilde_flux_D1.h\",\n",
+    "         \"calculate_Stilde_flux_D2.h\"]\n",
     "\n",
     "for file in files:\n",
     "    print(\"Checking file \" + file)\n",
@@ -683,7 +661,8 @@
     "        if num_diffs == 0:\n",
     "            print(\"No difference. TEST PASSED!\")\n",
     "        else:\n",
-    "            print(\"ERROR: Disagreement found with .py file. See differences above.\")"
+    "            print(\"ERROR: Disagreement found with .py file. See differences above.\")\n",
+    "            sys.exit(1)"
    ]
   },
   {
