SEOBNR: clean up derivative notebook and double-check agreement with the corresponding NRPy+ module.

--- a/Tutorial-SEOBNR_Derivative_Routine.ipynb
+++ b/Tutorial-SEOBNR_Derivative_Routine.ipynb
@@ -403,7 +403,9 @@
     "# Step 10: Validate against LALSuite and trusted `SEOBNR_Derivative_Routine` NRPy+ module \\[Back to [top](#toc)\\]\n",
     "$$\\label{code_validation}$$\n",
     "\n",
-    "We validate the output of this notebook against known LALSuite values of the Hamiltonian partial derivatives and the output of the `SEOBNR_Derivative_Routine` NRPy+ module.  We note that due to cancellations in the deriavtive terms, various versions of SymPy may result in relative errors that differ as much as an order of magnitude.  Furthermore, even changing the set of input pararameters can affect the relative error by as many as two orders of magnitude.  Therefore we look for agreement with LALSuite to 9 significant digits."
+    "We validate the output of this notebook against known LALSuite values of the Hamiltonian partial derivatives and the output of the `SEOBNR_Derivative_Routine` NRPy+ module.  We note that due to cancellations in the deriavtive terms, various versions of SymPy may result in relative errors that differ as much as an order of magnitude.  Furthermore, even changing the set of input pararameters can affect the relative error by as many as two orders of magnitude.  Therefore we look for agreement with LALSuite to at least 10 significant digits.\n",
+    "\n",
+    "When comparing the notebook output to that of the NRPy+ module, we compare term-by-term using SymPy to check that each right-hand side side is equivalent."
    ]
   },
   {
@@ -416,8 +418,10 @@
      "output_type": "stream",
      "text": [
       "Computing the difference between notebook output and trusted LALSuite derivative values...\n",
-      "('sympy version is ', 1.5)\n",
-      "Test passed: the notebook agrees with LALSuite to at least 9 significant digits!\n"
+      "Test passed: the notebook agrees with LALSuite to at least 10 significant digits!\n",
+      "Printing difference between notebook output and trusted NRPy+ module output...\n",
+      "Checking file partial_derivatives.txt-VALIDATION\n",
+      "No difference. TEST PASSED!\n"
      ]
     }
    ],
@@ -440,8 +444,7 @@
     "                  'EMgamma': 0.577215664901532860606512090082402431}\n",
     "        # Note that we transform the momentum based on the tortoise values\n",
     "        if tort_value==1:\n",
-    "#            values.update({'px': -1.517631642228534e-03, 'py': 2.693180445886167e-01, 'pz': -1.320499830947482e-04,\n",
-    "            values.update({'px': -1.517631642228534e-03, 'py': 2.693180445886167e-01, 'pz': -1.320499830957482e-04,\n",
+    "            values.update({'px': -1.517631642228534e-03, 'py': 2.693180445886167e-01, 'pz': -1.320499830947482e-04,\n",
     "                          'tortoise': 1})\n",
     "        else:\n",
     "            values.update({'px': -1.633028076483384e-03, 'py': 2.693177679992048e-01, 'pz': -1.320499918278832e-04,\n",
@@ -559,25 +562,8 @@
     "        if abs(relative_difference) > 1e-9:\n",
     "            print(\"The relative difference in dHreal_d%s is too large: %.15e\" % (var,relative_difference))\n",
     "            sys.exit(1)\n",
-    "print(\"Test passed: the notebook agrees with LALSuite to at least 9 significant digits!\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Printing difference between notebook output and trusted NRPy+ module output...\n",
-      "Checking file partial_derivatives.txt-VALIDATION\n",
-      "No difference. TEST PASSED!\n"
-     ]
-    }
-   ],
-   "source": [
+    "print(\"Test passed: the notebook agrees with LALSuite to at least 10 significant digits!\")\n",
+    "\n",
     "print(\"Printing difference between notebook output and trusted NRPy+ module output...\")\n",
     "# Open the files to compare\n",
     "file = 'partial_derivatives.txt'\n",
@@ -619,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -639,21 +625,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.16"
+   "pygments_lexer": "ipython3",
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
